Started code to get the purchase analysis data, working on gender data

--- a/HerosOfPymoli/HerosOfPymoli.ipynb
+++ b/HerosOfPymoli/HerosOfPymoli.ipynb
@@ -2,6 +2,313 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import dependencies\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create reousrce file location\n",
+    "purchase_data = ('Resources/purchase_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>$3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>$1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>$4.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>$3.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>$1.44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        SN  Age Gender  Item ID  \\\n",
+       "Purchase ID                                       \n",
+       "0                  Lisim78   20   Male      108   \n",
+       "1              Lisovynya38   40   Male      143   \n",
+       "2               Ithergue48   24   Male       92   \n",
+       "3            Chamassasya86   24   Male      100   \n",
+       "4                Iskosia90   23   Male      131   \n",
+       "\n",
+       "                                             Item Name  Price  \n",
+       "Purchase ID                                                    \n",
+       "0            Extraction, Quickblade Of Trembling Hands  $3.53  \n",
+       "1                                    Frenzied Scimitar  $1.56  \n",
+       "2                                         Final Critic  $4.88  \n",
+       "3                                          Blindscythe  $3.27  \n",
+       "4                                                 Fury  $1.44  "
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create df of the purchase data\n",
+    "pd_df = pd.read_csv(purchase_data, index_col='Purchase ID')\n",
+    "pd_df.head()\n",
+    "# pd_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>576</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Players\n",
+       "0            576"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Displays all unique players to make purchases\n",
+    "player_count = pd_df['SN'].nunique()\n",
+    "player_count\n",
+    "players = pd.DataFrame([player_count], columns=['Total Players'])\n",
+    "players"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number of Unique items</th>\n",
+       "      <th>Average Price</th>\n",
+       "      <th>Number of Purchases</th>\n",
+       "      <th>Total Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>179</td>\n",
+       "      <td>$3.05</td>\n",
+       "      <td>780</td>\n",
+       "      <td>$2,379.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Number of Unique items  Average Price  Number of Purchases  Total Revenue\n",
+       "0                     179          $3.05                  780      $2,379.77"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get number of unique items purchased\n",
+    "num_item = pd_df['Item ID'].nunique()\n",
+    "num_item\n",
+    "\n",
+    "# Get the average price per item\n",
+    "pd.options.display.float_format = \"${:,.2f}\".format\n",
+    "avg_price = pd_df['Price'].mean()\n",
+    "avg_price\n",
+    "\n",
+    "#Get the total number of purchases\n",
+    "tot_purchases = pd_df['SN'].count()\n",
+    "tot_purchases\n",
+    "\n",
+    "# Get the total revenue for the purchases\n",
+    "tot_rev = pd_df['Price'].sum()\n",
+    "tot_rev\n",
+    "\n",
+    "# Create a summary table for the Purchasing Analysis\n",
+    "pa_data = [num_item, avg_price, tot_purchases, tot_rev]\n",
+    "pa_columns = ['Number of Unique items', 'Average Price', 'Number of Purchases', 'Total Revenue']\n",
+    "purchase_df = pd.DataFrame([pa_data], columns=pa_columns)\n",
+    "purchase_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create new df to group numbers by gender \n",
+    "gender_df = pd_df.groupby(['Gender'])\n",
+    "gender_uni_df = gender_df['SN'].nunique()\n",
+    "gender_uni_df\n",
+    "\n",
+    "# # Numbers for male\n",
+    "male_count = gender_uni_df.count()\n",
+    "male_count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
