Updated code to output gender statistics

--- a/HerosOfPymoli/HerosOfPymoli.ipynb
+++ b/HerosOfPymoli/HerosOfPymoli.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "4                                                 Fury  $1.44  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,30 +282,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>81</td>\n",
+       "      <td>$0.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>484</td>\n",
+       "      <td>$0.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>11</td>\n",
+       "      <td>$0.02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "3"
+       "                       Total Count  Percentage of Players\n",
+       "Gender                                                   \n",
+       "Female                          81                  $0.14\n",
+       "Male                           484                  $0.84\n",
+       "Other / Non-Disclosed           11                  $0.02"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create new df to group numbers by gender \n",
-    "gender_df = pd_df.groupby(['Gender'])\n",
-    "gender_uni_df = gender_df['SN'].nunique()\n",
-    "gender_uni_df\n",
+    "gender_df = pd_df.drop_duplicates('SN')\n",
+    "gender_df\n",
     "\n",
-    "# # Numbers for male\n",
-    "male_count = gender_uni_df.count()\n",
-    "male_count\n"
+    "new_gender_df = gender_df.groupby('Gender')\n",
+    "new_gender_df.count()\n",
+    "\n",
+    "gender_count = new_gender_df['SN'].count()\n",
+    "gender_count\n",
+    "\n",
+    "gender_count = pd.DataFrame({'Total Count':gender_count})\n",
+    "gender_count\n",
+    "\n",
+    "total_count = gender_count['Total Count'].sum()\n",
+    "total_count\n",
+    "\n",
+    "gender_count['Percentage of Players'] = gender_count['Total Count']/total_count\n",
+    "gender_count\n",
+    "    \n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
