Updated code to do gender statistics

--- a/HerosOfPymoli/HerosOfPymoli.ipynb
+++ b/HerosOfPymoli/HerosOfPymoli.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "      <td>Male</td>\n",
        "      <td>108</td>\n",
        "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
-       "      <td>$3.53</td>\n",
+       "      <td>3.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -80,7 +80,7 @@
        "      <td>Male</td>\n",
        "      <td>143</td>\n",
        "      <td>Frenzied Scimitar</td>\n",
-       "      <td>$1.56</td>\n",
+       "      <td>1.56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -89,7 +89,7 @@
        "      <td>Male</td>\n",
        "      <td>92</td>\n",
        "      <td>Final Critic</td>\n",
-       "      <td>$4.88</td>\n",
+       "      <td>4.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -98,7 +98,7 @@
        "      <td>Male</td>\n",
        "      <td>100</td>\n",
        "      <td>Blindscythe</td>\n",
-       "      <td>$3.27</td>\n",
+       "      <td>3.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -107,7 +107,7 @@
        "      <td>Male</td>\n",
        "      <td>131</td>\n",
        "      <td>Fury</td>\n",
-       "      <td>$1.44</td>\n",
+       "      <td>1.44</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -124,14 +124,14 @@
        "\n",
        "                                             Item Name  Price  \n",
        "Purchase ID                                                    \n",
-       "0            Extraction, Quickblade Of Trembling Hands  $3.53  \n",
-       "1                                    Frenzied Scimitar  $1.56  \n",
-       "2                                         Final Critic  $4.88  \n",
-       "3                                          Blindscythe  $3.27  \n",
-       "4                                                 Fury  $1.44  "
+       "0            Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                                    Frenzied Scimitar   1.56  \n",
+       "2                                         Final Critic   4.88  \n",
+       "3                                          Blindscythe   3.27  \n",
+       "4                                                 Fury   1.44  "
       ]
      },
-     "execution_count": 175,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 272,
    "metadata": {
     "scrolled": true
    },
@@ -188,7 +188,7 @@
        "0            576"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -239,18 +239,18 @@
        "      <td>179</td>\n",
        "      <td>$3.05</td>\n",
        "      <td>780</td>\n",
-       "      <td>$2,379.77</td>\n",
+       "      <td>$2379.77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Number of Unique items  Average Price  Number of Purchases  Total Revenue\n",
-       "0                     179          $3.05                  780      $2,379.77"
+       "   Number of Unique items Average Price  Number of Purchases Total Revenue\n",
+       "0                     179         $3.05                  780      $2379.77"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,8 +261,7 @@
     "num_item\n",
     "\n",
     "# Get the average price per item\n",
-    "pd.options.display.float_format = \"${:,.2f}\".format\n",
-    "avg_price = pd_df['Price'].mean()\n",
+    "avg_price = '${0:.2f}'.format(pd_df['Price'].mean())\n",
     "avg_price\n",
     "\n",
     "#Get the total number of purchases\n",
@@ -270,7 +269,7 @@
     "tot_purchases\n",
     "\n",
     "# Get the total revenue for the purchases\n",
-    "tot_rev = pd_df['Price'].sum()\n",
+    "tot_rev = '${0:.2f}'.format(pd_df['Price'].sum())\n",
     "tot_rev\n",
     "\n",
     "# Create a summary table for the Purchasing Analysis\n",
@@ -282,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -317,33 +316,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Female</th>\n",
-       "      <td>81</td>\n",
-       "      <td>$0.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>484</td>\n",
-       "      <td>$0.84</td>\n",
+       "      <td>84.03%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>81</td>\n",
+       "      <td>14.06%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>11</td>\n",
-       "      <td>$0.02</td>\n",
+       "      <td>1.91%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Total Count  Percentage of Players\n",
-       "Gender                                                   \n",
-       "Female                          81                  $0.14\n",
-       "Male                           484                  $0.84\n",
-       "Other / Non-Disclosed           11                  $0.02"
+       "                       Total Count Percentage of Players\n",
+       "Gender                                                  \n",
+       "Male                           484                84.03%\n",
+       "Female                          81                14.06%\n",
+       "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +365,13 @@
     "total_count\n",
     "\n",
     "gender_count['Percentage of Players'] = gender_count['Total Count']/total_count\n",
+    "gender_count['Percentage of Players'] = gender_count['Percentage of Players'].map('{0:.2%}'.format)\n",
     "gender_count\n",
+    "\n",
+    "gender_counts = gender_count.sort_values('Total Count', ascending=False)\n",
+    "gender_counts\n",
+    "\n",
+    "\n",
     "    \n",
     "\n"
    ]
