--- a/HerosOfPymoli/HerosOfPymoli.ipynb
+++ b/HerosOfPymoli/HerosOfPymoli.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,10 +355,10 @@
     "new_gender_df = gender_df.groupby('Gender')\n",
     "new_gender_df.count()\n",
     "\n",
-    "gender_count = new_gender_df['SN'].count()\n",
-    "gender_count\n",
+    "gender_count_uni = new_gender_df['SN'].count()\n",
+    "gender_count_uni\n",
     "\n",
-    "gender_count = pd.DataFrame({'Total Count':gender_count})\n",
+    "gender_count = pd.DataFrame({'Total Count':gender_count_uni})\n",
     "gender_count\n",
     "\n",
     "total_count = gender_count['Total Count'].sum()\n",
@@ -374,6 +374,70 @@
     "\n",
     "    \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Average Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640level0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row0_col0\" class=\"data row0 col0\" >113</td>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row0_col2\" class=\"data row0 col2\" >361.940000</td>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640level0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row1_col0\" class=\"data row1 col0\" >652</td>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row1_col2\" class=\"data row1 col2\" >1967.640000</td>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row2_col0\" class=\"data row2 col0\" >15</td>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row2_col2\" class=\"data row2 col2\" >50.190000</td>\n",
+       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x1e238cb0948>"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculating purchases by gender\n",
+    "purch_df = pd_df.groupby('Gender')\n",
+    "purch_df.count()\n",
+    "\n",
+    "purch_count = purch_df['SN'].count()\n",
+    "purch_count\n",
+    "\n",
+    "avg_purch_price = purch_df['Price'].mean()\n",
+    "avg_purch_price\n",
+    "\n",
+    "tot_purch_val = purch_df['Price'].sum()\n",
+    "tot_purch_val\n",
+    "\n",
+    "avg_purch_tot_gen = tot_purch_val/gender_count_uni\n",
+    "avg_purch_tot_gen\n",
+    "\n",
+    "gender_purchase = pd.DataFrame({'Purchase Count':purch_count, 'Average Purchase Price':avg_purch_price, 'Total Purchase Value':tot_purch_val, 'Average Total Purchase per Person':avg_purch_tot_gen})\n",
+    "gender_purchase = gender_purchase.style.format({'Average Purchase Price':'${:.02f}', 'Total Purchase Price':'${:.02f}', 'Average Total Purchase per Person':'${:.02f}'})\n",
+    "gender_purchase\n"
    ]
   },
   {
