--- a/HerosOfPymoli/HerosOfPymoli.ipynb
+++ b/HerosOfPymoli/HerosOfPymoli.ipynb
@@ -442,10 +442,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 457,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Summary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>17</td>\n",
+       "      <td>2.95%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>22</td>\n",
+       "      <td>3.82%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>107</td>\n",
+       "      <td>18.58%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>258</td>\n",
+       "      <td>44.79%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>77</td>\n",
+       "      <td>13.37%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>52</td>\n",
+       "      <td>9.03%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>31</td>\n",
+       "      <td>5.38%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2.08%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Total Count Percentage of Players\n",
+       "Age Summary                                   \n",
+       "<10                   17                 2.95%\n",
+       "10-14                 22                 3.82%\n",
+       "15-19                107                18.58%\n",
+       "20-24                258                44.79%\n",
+       "25-29                 77                13.37%\n",
+       "30-34                 52                 9.03%\n",
+       "35-39                 31                 5.38%\n",
+       "40+                   12                 2.08%"
+      ]
+     },
+     "execution_count": 457,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating new df to break down age groups\n",
+    "\n",
+    "bins = [0,9,14,19,24,29,34,39,45]\n",
+    "labels = ['<10','10-14','15-19','20-24','25-29','30-34','35-39','40+']\n",
+    "pd_df['Age Summary'] = pd.cut(pd_df['Age'], bins, labels=labels, include_lowest=True)\n",
+    "pd_df\n",
+    "\n",
+    "age_df = pd_df.drop_duplicates('SN')\n",
+    "age_df_uni = age_df.groupby('Age Summary')\n",
+    "age_df_uni.count()\n",
+    "\n",
+    "age_count_uni = age_df_uni['SN'].count()\n",
+    "age_count = pd.DataFrame({'Total Count':age_count_uni})\n",
+    "age_count\n",
+    "\n",
+    "total_age_count = age_count['Total Count'].sum()\n",
+    "\n",
+    "age_count['Percentage of Players'] = age_count['Total Count']/total_age_count\n",
+    "age_count['Percentage of Players'] = age_count['Percentage of Players'].map('{0:.2%}'.format)\n",
+    "age_count\n"
+   ]
   },
   {
    "cell_type": "code",
