--- a/HerosOfPymoli/HerosOfPymoli.ipynb
+++ b/HerosOfPymoli/HerosOfPymoli.ipynb
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 555,
    "metadata": {},
    "outputs": [
     {
@@ -826,20 +826,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>SN</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Item ID</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Age Summary</th>\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Item Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Purchase ID</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -847,159 +841,81 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lisim78</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>108</td>\n",
-       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
-       "      <td>3.53</td>\n",
-       "      <td>20-24</td>\n",
+       "      <th>92</th>\n",
+       "      <th>Final Critic</th>\n",
+       "      <td>13</td>\n",
+       "      <td>$4.61</td>\n",
+       "      <td>$59.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lisovynya38</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>143</td>\n",
-       "      <td>Frenzied Scimitar</td>\n",
-       "      <td>1.56</td>\n",
-       "      <td>40+</td>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>12</td>\n",
+       "      <td>$4.23</td>\n",
+       "      <td>$50.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ithergue48</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>92</td>\n",
-       "      <td>Final Critic</td>\n",
-       "      <td>4.88</td>\n",
-       "      <td>20-24</td>\n",
+       "      <th>82</th>\n",
+       "      <th>Nirvana</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.90</td>\n",
+       "      <td>$44.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chamassasya86</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Blindscythe</td>\n",
-       "      <td>3.27</td>\n",
-       "      <td>20-24</td>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.58</td>\n",
+       "      <td>$41.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Iskosia90</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>131</td>\n",
-       "      <td>Fury</td>\n",
-       "      <td>1.44</td>\n",
-       "      <td>20-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>Ilassast39</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>164</td>\n",
-       "      <td>Exiled Doomblade</td>\n",
-       "      <td>1.63</td>\n",
-       "      <td>15-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>Lisassala98</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>56</td>\n",
-       "      <td>Foul Titanium Battle Axe</td>\n",
-       "      <td>2.92</td>\n",
-       "      <td>15-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>Aiduecal76</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>134</td>\n",
-       "      <td>Undead Crusader</td>\n",
-       "      <td>4.50</td>\n",
-       "      <td>20-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>Chadossa89</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>132</td>\n",
-       "      <td>Persuasion</td>\n",
-       "      <td>3.19</td>\n",
-       "      <td>20-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>Haisrisuir60</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>92</td>\n",
-       "      <td>Final Critic</td>\n",
-       "      <td>4.19</td>\n",
-       "      <td>20-24</td>\n",
+       "      <th>103</th>\n",
+       "      <th>Singed Scalpel</th>\n",
+       "      <td>8</td>\n",
+       "      <td>$4.35</td>\n",
+       "      <td>$34.80</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        SN  Age Gender  Item ID  \\\n",
-       "Purchase ID                                       \n",
-       "0                  Lisim78   20   Male      108   \n",
-       "1              Lisovynya38   40   Male      143   \n",
-       "2               Ithergue48   24   Male       92   \n",
-       "3            Chamassasya86   24   Male      100   \n",
-       "4                Iskosia90   23   Male      131   \n",
-       "...                    ...  ...    ...      ...   \n",
-       "95              Ilassast39   18   Male      164   \n",
-       "96             Lisassala98   16   Male       56   \n",
-       "97              Aiduecal76   20   Male      134   \n",
-       "98              Chadossa89   23   Male      132   \n",
-       "99            Haisrisuir60   23   Male       92   \n",
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "92      Final Critic                                              13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82      Nirvana                                                    9   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "103     Singed Scalpel                                             8   \n",
        "\n",
-       "                                             Item Name  Price Age Summary  \n",
-       "Purchase ID                                                                \n",
-       "0            Extraction, Quickblade Of Trembling Hands   3.53       20-24  \n",
-       "1                                    Frenzied Scimitar   1.56         40+  \n",
-       "2                                         Final Critic   4.88       20-24  \n",
-       "3                                          Blindscythe   3.27       20-24  \n",
-       "4                                                 Fury   1.44       20-24  \n",
-       "...                                                ...    ...         ...  \n",
-       "95                                    Exiled Doomblade   1.63       15-19  \n",
-       "96                            Foul Titanium Battle Axe   2.92       15-19  \n",
-       "97                                     Undead Crusader   4.50       20-24  \n",
-       "98                                          Persuasion   3.19       20-24  \n",
-       "99                                        Final Critic   4.19       20-24  \n",
+       "                                                     Item Price  \\\n",
+       "Item ID Item Name                                                 \n",
+       "92      Final Critic                                      $4.61   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
+       "82      Nirvana                                           $4.90   \n",
+       "145     Fiery Glass Crusader                              $4.58   \n",
+       "103     Singed Scalpel                                    $4.35   \n",
        "\n",
-       "[100 rows x 7 columns]"
+       "                                                     Total Purchase Value  \n",
+       "Item ID Item Name                                                          \n",
+       "92      Final Critic                                               $59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
+       "82      Nirvana                                                    $44.10  \n",
+       "145     Fiery Glass Crusader                                       $41.22  \n",
+       "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 518,
+     "execution_count": 555,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd_df.head(100)"
+    "# Sorting the above table to display most profitable item\n",
+    "pop_items = pop_agg.sort_values('Total Purchase Value', ascending=False)\n",
+    "pop_items['Item Price'] = pop_items['Item Price'].map('${:.2f}'.format)\n",
+    "pop_items['Total Purchase Value'] = pop_items['Total Purchase Value'].map('${:.2f}'.format)\n",
+    "pop_items.head(5)"
    ]
   },
   {
