--- a/HerosOfPymoli/HerosOfPymoli.ipynb
+++ b/HerosOfPymoli/HerosOfPymoli.ipynb
@@ -378,42 +378,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 556,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Average Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_12067d8c_c166_11ea_b006_8cc84b311640\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Average Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640level0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row0_col0\" class=\"data row0 col0\" >113</td>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row0_col2\" class=\"data row0 col2\" >361.940000</td>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
+       "                        <th id=\"T_12067d8c_c166_11ea_b006_8cc84b311640level0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row0_col0\" class=\"data row0 col0\" >113</td>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row0_col2\" class=\"data row0 col2\" >$361.94</td>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640level0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row1_col0\" class=\"data row1 col0\" >652</td>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row1_col2\" class=\"data row1 col2\" >1967.640000</td>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
+       "                        <th id=\"T_12067d8c_c166_11ea_b006_8cc84b311640level0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row1_col0\" class=\"data row1 col0\" >652</td>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row1_col2\" class=\"data row1 col2\" >$1967.64</td>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row2_col0\" class=\"data row2 col0\" >15</td>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row2_col2\" class=\"data row2 col2\" >50.190000</td>\n",
-       "                        <td id=\"T_b15e90c0_c14a_11ea_a282_8cc84b311640row2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
+       "                        <th id=\"T_12067d8c_c166_11ea_b006_8cc84b311640level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row2_col0\" class=\"data row2 col0\" >15</td>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row2_col2\" class=\"data row2 col2\" >$50.19</td>\n",
+       "                        <td id=\"T_12067d8c_c166_11ea_b006_8cc84b311640row2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1e238cb0948>"
+       "<pandas.io.formats.style.Styler at 0x1e23946fec8>"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 556,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
     "avg_purch_tot_gen\n",
     "\n",
     "gender_purchase = pd.DataFrame({'Purchase Count':purch_count, 'Average Purchase Price':avg_purch_price, 'Total Purchase Value':tot_purch_val, 'Average Total Purchase per Person':avg_purch_tot_gen})\n",
-    "gender_purchase = gender_purchase.style.format({'Average Purchase Price':'${:.02f}', 'Total Purchase Price':'${:.02f}', 'Average Total Purchase per Person':'${:.02f}'})\n",
+    "gender_purchase = gender_purchase.style.format({'Average Purchase Price':'${:.02f}', 'Total Purchase Value':'${:.02f}', 'Average Total Purchase per Person':'${:.02f}'})\n",
     "gender_purchase\n"
    ]
   },
@@ -559,6 +559,156 @@
     "age_count['Percentage of Players'] = age_count['Total Count']/total_age_count\n",
     "age_count['Percentage of Players'] = age_count['Percentage of Players'].map('{0:.2%}'.format)\n",
     "age_count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 565,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Avg Total Purchase per Person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Summary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>23</td>\n",
+       "      <td>$3.35</td>\n",
+       "      <td>$77.13</td>\n",
+       "      <td>$4.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>28</td>\n",
+       "      <td>$2.96</td>\n",
+       "      <td>$82.78</td>\n",
+       "      <td>$3.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>136</td>\n",
+       "      <td>$3.04</td>\n",
+       "      <td>$412.89</td>\n",
+       "      <td>$3.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>365</td>\n",
+       "      <td>$3.05</td>\n",
+       "      <td>$1114.06</td>\n",
+       "      <td>$4.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>101</td>\n",
+       "      <td>$2.90</td>\n",
+       "      <td>$293.00</td>\n",
+       "      <td>$3.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>73</td>\n",
+       "      <td>$2.93</td>\n",
+       "      <td>$214.00</td>\n",
+       "      <td>$4.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>41</td>\n",
+       "      <td>$3.60</td>\n",
+       "      <td>$147.67</td>\n",
+       "      <td>$4.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>13</td>\n",
+       "      <td>$2.94</td>\n",
+       "      <td>$38.24</td>\n",
+       "      <td>$3.19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Purchase Count Average Purchase Price Total Purchase Value  \\\n",
+       "Age Summary                                                               \n",
+       "<10                      23                  $3.35               $77.13   \n",
+       "10-14                    28                  $2.96               $82.78   \n",
+       "15-19                   136                  $3.04              $412.89   \n",
+       "20-24                   365                  $3.05             $1114.06   \n",
+       "25-29                   101                  $2.90              $293.00   \n",
+       "30-34                    73                  $2.93              $214.00   \n",
+       "35-39                    41                  $3.60              $147.67   \n",
+       "40+                      13                  $2.94               $38.24   \n",
+       "\n",
+       "            Avg Total Purchase per Person  \n",
+       "Age Summary                                \n",
+       "<10                                 $4.54  \n",
+       "10-14                               $3.76  \n",
+       "15-19                               $3.86  \n",
+       "20-24                               $4.32  \n",
+       "25-29                               $3.81  \n",
+       "30-34                               $4.12  \n",
+       "35-39                               $4.76  \n",
+       "40+                                 $3.19  "
+      ]
+     },
+     "execution_count": 565,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculating purchasing by age group\n",
+    "age_df_pur = pd_df.groupby('Age Summary')\n",
+    "age_df_pur.count()\n",
+    "\n",
+    "pur_cnt_age = age_df_pur['SN'].count()\n",
+    "pur_cnt_age\n",
+    "pur_avg_age = age_df_pur['Price'].mean()\n",
+    "pur_avg_age\n",
+    "pur_tot_age = age_df_pur['Price'].sum()\n",
+    "pur_tot_age\n",
+    "avg_pur_tot = pur_tot_age/age_count_uni\n",
+    "avg_pur_tot\n",
+    "\n",
+    "age_dem_pur = pd.DataFrame({'Purchase Count':pur_cnt_age, 'Average Purchase Price':pur_avg_age, 'Total Purchase Value':pur_tot_age, 'Avg Total Purchase per Person':avg_pur_tot})\n",
+    "age_dem_pur['Average Purchase Price'] = age_dem_pur['Average Purchase Price'].map('${:.2f}'.format)\n",
+    "age_dem_pur['Total Purchase Value'] = age_dem_pur['Total Purchase Value'].map('${:.2f}'.format)\n",
+    "age_dem_pur['Avg Total Purchase per Person'] = age_dem_pur['Avg Total Purchase per Person'].map('${:.2f}'.format)\n",
+    "age_dem_pur"
    ]
   },
   {
