--- a/HerosOfPymoli/HerosOfPymoli.ipynb
+++ b/HerosOfPymoli/HerosOfPymoli.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hyperlink to fully rendered Notebook file\n",
+    "# https://nbviewer.jupyter.org/github/dborowski16/pandas-challenge/blob/master/HerosOfPymoli/HerosOfPymoli.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Import dependencies\n",
     "import pandas as pd"
    ]
@@ -208,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +265,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,42 +379,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Average Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Average Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640level0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row0_col0\" class=\"data row0 col0\" >113</td>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row0_col2\" class=\"data row0 col2\" >$361.94</td>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
+       "                        <th id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640level0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row0_col0\" class=\"data row0 col0\" >113</td>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row0_col2\" class=\"data row0 col2\" >$361.94</td>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640level0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row1_col0\" class=\"data row1 col0\" >652</td>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row1_col2\" class=\"data row1 col2\" >$1,967.64</td>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
+       "                        <th id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640level0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row1_col0\" class=\"data row1 col0\" >652</td>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row1_col2\" class=\"data row1 col2\" >$1,967.64</td>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row2_col0\" class=\"data row2 col0\" >15</td>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row2_col2\" class=\"data row2 col2\" >$50.19</td>\n",
-       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
+       "                        <th id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row2_col0\" class=\"data row2 col0\" >15</td>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row2_col2\" class=\"data row2 col2\" >$50.19</td>\n",
+       "                        <td id=\"T_39ae7dba_c2cc_11ea_a930_8cc84b311640row2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x12a486e3108>"
+       "<pandas.io.formats.style.Styler at 0x12a492b1588>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,6 +436,7 @@
     "                                'Total Purchase Value':tot_purch_val,\n",
     "                                'Average Total Purchase per Person':avg_per}\n",
     "                              )\n",
+    "\n",
     "\n",
     "gender_purchase = gender_purchase.style.format({'Average Purchase Price':'${0:,.2f}', \n",
     "                                                'Total Purchase Value':'${0:,.2f}', \n",
